--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  material_design_icons_flutter: ^4.0.5755
+  lottie: ^0.7.0+1
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
