--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   material_design_icons_flutter: ^4.0.5755
   lottie: ^0.7.0+1
   flutter_spinkit: ^4.1.2
-  convex_bottom_bar: ^2.6.0
   image_crop: ^0.3.4
+  page_transition: ^1.1.7+2
+  animations: ^1.1.2
 
 dev_dependencies:
   flutter_test:
