--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   image_crop: ^0.3.4
   page_transition: ^1.1.7+2
   animations: ^1.1.2
+  flutter_staggered_grid_view: ^0.3.2
+  convex_bottom_bar: ^2.6.0
 
 dev_dependencies:
   flutter_test:
