--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   material_design_icons_flutter: ^4.0.5755
   lottie: ^0.7.0+1
   flutter_spinkit: ^4.1.2
-  image_crop: ^0.3.4
+  image_cropper: ^1.3.1
+  image_picker: ^0.6.7+14
   page_transition: ^1.1.7+2
   animations: ^1.1.2
   flutter_staggered_grid_view: ^0.3.2
