--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   animations: ^1.1.2
   flutter_staggered_grid_view: ^0.3.2
   convex_bottom_bar: ^2.6.0
+  timeline_tile: ^1.0.0
 
 dev_dependencies:
   flutter_test:
