--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.2
   convex_bottom_bar: ^2.6.0
   timeline_tile: ^1.0.0
+  photo_manager: ^0.5.8
+  multi_image_picker: ^4.7.14
 
 dev_dependencies:
   flutter_test:
